--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,7 @@ INPUTDIR=$(BASEDIR)/content
 OUTPUTDIR=$(BASEDIR)/output
 CONFFILE=$(BASEDIR)/pelicanconf.py
 PUBLISHCONF=$(BASEDIR)/publishconf.py
-
+PORT=8100
 
 DEBUG ?= 0
 ifeq ($(DEBUG), 1)
